yiltc/testsuite/negative/interp_string_void.yilt
// Interpolating a function reference in string should fail
fn helper() int
    return 42
fn main()
    let x = f"{helper}"
